// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitmojiList when is list mode should render the component 1`] = `
<div
  className="row"
  id="gitmoji-list"
>
  <div
    className="col-xs-12"
  >
    <div
      className="container"
    >
      <div
        className="inputWrapper"
      >
        <input
          className="searchInput"
          name="searchInput"
          onChange={[Function]}
          placeholder="Search your gitmoji..."
          type="text"
          value=""
        />
        <kbd
          className="kbd"
        >
          Ctrl
           K
        </kbd>
      </div>
      <div
        className="actionsContainer"
      >
        <button
          className="button"
          onClick={[Function]}
        >
          <svg
            className="icon icon-light"
          >
            <use
              xlinkHref="#icon-light"
            />
          </svg>
        </button>
        <div
          className="container"
        >
          <button
            className="button buttonActive"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              className="icon icon-grid"
            >
              <use
                xlinkHref="#icon-grid"
              />
            </svg>
          </button>
          <button
            className="button "
            disabled={false}
            onClick={[Function]}
          >
            <svg
              className="icon icon-list"
            >
              <use
                xlinkHref="#icon-list"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff7281",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🎨"
          type="button"
        >
          🎨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":art:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :art:
          </code>
        </button>
        <p>
          Improve structure / format of the code.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#40c4ff",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="⚡️"
          type="button"
        >
          ⚡️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":zap:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :zap:
          </code>
        </button>
        <p>
          Improve performance.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff9d44",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🔥"
          type="button"
        >
          🔥
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":fire:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :fire:
          </code>
        </button>
        <p>
          Remove code or files.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#8cd842",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🐛"
          type="button"
        >
          🐛
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":bug:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :bug:
          </code>
        </button>
        <p>
          Fix a bug.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#fb584a",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🚑️"
          type="button"
        >
          🚑️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":ambulance:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :ambulance:
          </code>
        </button>
        <p>
          Critical hotfix.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ffe55f",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="✨"
          type="button"
        >
          ✨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":sparkles:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :sparkles:
          </code>
        </button>
        <p>
          Introduce new features.
        </p>
      </div>
    </div>
  </article>
</div>
`;

exports[`GitmojiList when is not list mode should render the component 1`] = `
<div
  className="row"
  id="gitmoji-list"
>
  <div
    className="col-xs-12"
  >
    <div
      className="container"
    >
      <div
        className="inputWrapper"
      >
        <input
          className="searchInput"
          name="searchInput"
          onChange={[Function]}
          placeholder="Search your gitmoji..."
          type="text"
          value=""
        />
        <kbd
          className="kbd"
        >
          Ctrl
           K
        </kbd>
      </div>
      <div
        className="actionsContainer"
      >
        <div
          className="container"
        >
          <button
            className="button"
            disabled={true}
          />
        </div>
        <div
          className="container"
        >
          <button
            className="button buttonActive"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              className="icon icon-grid"
            >
              <use
                xlinkHref="#icon-grid"
              />
            </svg>
          </button>
          <button
            className="button "
            disabled={false}
            onClick={[Function]}
          >
            <svg
              className="icon icon-list"
            >
              <use
                xlinkHref="#icon-list"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff7281",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🎨"
          type="button"
        >
          🎨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":art:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :art:
          </code>
        </button>
        <p>
          Improve structure / format of the code.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#40c4ff",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="⚡️"
          type="button"
        >
          ⚡️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":zap:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :zap:
          </code>
        </button>
        <p>
          Improve performance.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff9d44",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🔥"
          type="button"
        >
          🔥
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":fire:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :fire:
          </code>
        </button>
        <p>
          Remove code or files.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#8cd842",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🐛"
          type="button"
        >
          🐛
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":bug:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :bug:
          </code>
        </button>
        <p>
          Fix a bug.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#fb584a",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🚑️"
          type="button"
        >
          🚑️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":ambulance:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :ambulance:
          </code>
        </button>
        <p>
          Critical hotfix.
        </p>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ffe55f",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="✨"
          type="button"
        >
          ✨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <button
          className="gitmoji-clipboard-code gitmojiCode"
          data-clipboard-text=":sparkles:"
          tabIndex="-1"
          type="button"
        >
          <code>
            :sparkles:
          </code>
        </button>
        <p>
          Introduce new features.
        </p>
      </div>
    </div>
  </article>
</div>
`;
